--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,10 @@
     color:white;
     background:#0078AB ;
 }
+.sidebar nav a:active {
+    color:white;
+    background:#0078AB ;
+}
 
 .profile-info {
 
@@ -27,5 +31,46 @@
     color: white;
     padding: 0.2rem 0.2rem 0.2rem 0.2rem;
     border-radius: 0.5rem;
+}
+
+.client-headers {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    /* identical to box height */
+
+
+    color: rgba(0, 0, 0, 0.5);
+    height: 4.063rem;
+    border-width: 0 0 4px 0;
+    position: relative;
+
+}
+
+.client-headers::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 100%;
+    height: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.clients-edit-btn {
+    width: 108px;
+    height: 39px;
+    background-color: #005073;
+    color: white;
+}
+
+.clients-info-btn {
+    width: 108px;
+    height: 39px;
+    background: rgba(0, 0, 0, 0.25);
+    border: none;
+    color: white;
 }
 
