--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,5 @@
+
+
 .sidebar {
     background-color: #005073;
 }
@@ -126,4 +128,47 @@
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 
+.login-bg {
+    background-color: #48B7DA;
+}
+
+.login-form {
+    width: 31.25rem;
+    height: 31.25rem;
+    background-color: #96E6FF;
+    border-radius: 10px;
+}
+
+.login-form .trainingicon{
+    width: 5.25rem;
+}
+
+.login-form .sign-in {
+    background-color: #0078AB;
+    color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    border-radius: 20px;
+    border: 1px solid #000000;
+
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.login-form .forgot-password {
+    background-color: #3CA1C1;
+    border-radius: 20px;
+    border: 1px solid black;
+}.login-form .sign-up {
+    background-color: #44D442;
+    border-radius: 20px;
+    border: 1px solid black;
+}
+
+ .login-form .error {
+     color: #8B0000;
+     font-size: 0.8rem;
+ }
 
