--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,11 @@
+@font-face {
+    font-family: 'Inter';
+    src: url('../Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype');
+}
 
-
+body {
+    font-family: 'Inter', serif;
+}
 .sidebar {
     background-color: #005073;
 }
@@ -149,11 +155,10 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
+    font-size: 25px;
     line-height: 39px;
     border-radius: 20px;
     border: 1px solid #000000;
-
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -161,10 +166,16 @@
     background-color: #3CA1C1;
     border-radius: 20px;
     border: 1px solid black;
-}.login-form .sign-up {
+    color: white;
+
+}
+
+.login-form .sign-up {
     background-color: #44D442;
     border-radius: 20px;
     border: 1px solid black;
+    color: white;
+
 }
 
  .login-form .error {
