--- a/src/css/main.css
+++ b/src/css/main.css
@@ -96,10 +96,10 @@ body {
     transition: all .5s ease-in-out;
     background-color: #005073;
     padding-right: 40px;
-    color:#fff;
+    color:black;
 }
 .input-search::placeholder{
-    color:rgba(255,255,255,.5);
+    color:black;
     font-size: 18px;
     letter-spacing: 2px;
     font-weight: 100;
@@ -123,8 +123,9 @@ body {
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
+    border-bottom:1px solid #005073;
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    color:black
 }
 .input-search:focus{
     width: 300px;
@@ -132,7 +133,9 @@ body {
     background-color: transparent;
     border-bottom:1px solid rgba(255,255,255,.5);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    color: black;
 }
+
 
 .login-bg {
     background-color: #48B7DA;
