--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,6 +36,7 @@ body {
     color: white;
     padding: 0.2rem 0.2rem 0.2rem 0.2rem;
     border-radius: 0.5rem;
+    border:none
 }
 
 .client-headers {
