--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+:root {
+    --primary-color: #005073;
+}
+
 @font-face {
     font-family: 'Inter';
     src: url('../Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype');
@@ -6,25 +10,53 @@
 body {
     font-family: 'Inter', serif;
 }
+
+h4 {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    color: var(--primary-color);
+    border-bottom: 1px solid var(--primary-color);
+    padding-bottom: 0.5rem;
+    border-bottom-width: .5px;
+    display: inline-block;
+    width: 70%;
+    box-sizing: border-box;
+}
+
+.h4::after {
+    content: "";
+    display: block;
+    width: 100%;
+    margin-top: 0.5rem;
+}
+
+
+.text-button {
+    cursor:pointer;
+}
+
 .sidebar {
-    background-color: #005073;
+    background-color: var(--primary-color);
 }
 
 .sidebar nav a {
     text-decoration: none;
-    color: #C6F1FF;
-    font-size: 2rem;
+    color: white;
+    font-size: 1.5rem;
 }
 
 
-.sidebar nav .active {
-    color:white;
-    background:#0078AB ;
+.sidebar nav a .active {
+    color:#96E6FF;
+
 }
 
 .profile-info {
 
-    border-bottom: solid 1px black
+}
+
+.profile-item-head {
+    color: lightgray;
 }
 
 .profile-info p {
@@ -32,12 +64,31 @@ body {
 }
 
 .profile-btn {
-    background-color: #005073;
+    background-color: var(--primary-color);
     color: white;
-    padding: 0.2rem 0.2rem 0.2rem 0.2rem;
     border-radius: 0.5rem;
-    border:none
+    border:none;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
+
+.profile-btn:hover {
+    color:#96E6FF;
+}
+
+.profile-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #fff;
+    color: var(--primary-color);
+    box-shadow: 0 0 10px 0 rgba(108, 117, 125, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 .client-headers {
     font-family: 'Inter';
@@ -68,7 +119,7 @@ body {
 .clients-edit-btn {
     width: 108px;
     height: 39px;
-    background-color: #005073;
+    background-color: var(--primary-color);
     color: white;
 }
 
@@ -78,6 +129,10 @@ body {
     background: rgba(0, 0, 0, 0.25);
     border: none;
     color: white;
+}
+
+.clients .icon {
+    color:var(--primary-color);
 }
 
 .search-box{
@@ -95,7 +150,7 @@ body {
     outline: none;
     border-radius: 25px;
     transition: all .5s ease-in-out;
-    background-color: #005073;
+    background-color: var(--primary-color);
     padding-right: 40px;
     color:black;
 }
@@ -124,7 +179,7 @@ body {
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
-    border-bottom:1px solid #005073;
+    border-bottom:1px solid var(--primary-color);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
     color:black
 }
@@ -216,5 +271,16 @@ body {
 
 
 .signup-form-container a:hover {
-    color: #0078AB;
+    color: var(--primary-color);
 }
+
+.schedule-save {
+    cursor: pointer;
+    color:black;
+    font-weight: 500;
+}
+.schedule-save:hover {
+    color:var(--primary-color);
+}
+
+
