--- a/src/components/Exercises.css
+++ b/src/components/Exercises.css
@@ -38,4 +38,29 @@ tr:nth-child(odd) {
 
 .exercise-input {
     width: 12%;
+    border: solid 1px #282c34;
+    border-radius: 5px;
+    padding: 2px 10px;
+    margin-bottom: 2%;
+    margin-right: 1%;
+}
+
+.fas {
+    cursor: pointer;
+    margin-left: 1%;
+}
+
+.add-exercise-input {
+    width: 15%;
+    border: solid 1px #282c34;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-bottom: 1%;
+}
+
+.modal-close {
+    border: 0;
+    background: 0;
+    margin-left: 90%;
+    font-size: 1.25em;
 }
