--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,7 @@
     --primary-color: #005073;
 }
 
+
 @font-face {
     font-family: 'Inter';
     src: url('../Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype');
@@ -91,7 +92,7 @@ h4 {
 
 
 .client-headers {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -211,7 +212,7 @@ h4 {
 .login-form .sign-in {
     background-color: #0078AB;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 600;
     font-size: 25px;
@@ -283,4 +284,12 @@ h4 {
     color:var(--primary-color);
 }
 
+.main-content {
+    background-image: url("../Images/background2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #005073;
+    background-blend-mode: screen;
+
+}
 
